--- a/training/gemma-lora-example.ipynb
+++ b/training/gemma-lora-example.ipynb
@@ -68,7 +68,7 @@
     "import torch; assert torch.cuda.get_device_capability()[0] >= 8, 'Hardware not supported for Flash Attention'\n",
     "# install flash-attn\n",
     "!pip install ninja packaging\n",
-    "!MAX_JOBS=4 pip install flash-attn --no-build-isolation"
+    "!MAX_JOBS=4 pip install flash-attn --no-build-isolation --upgrade"
    ]
   },
   {
@@ -94,7 +94,7 @@
     "from huggingface_hub import login\n",
     "\n",
     "login(\n",
-    "  token=\"\", # ADD YOUR TOKEN HERE\n",
+    "  token=\"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\", # ADD YOUR TOKEN HERE\n",
     "  add_to_git_credential=True\n",
     ")\n"
    ]
@@ -125,7 +125,9 @@
     "from datasets import load_dataset\n",
     "\n",
     "# Load Dolly Dataset.\n",
-    "dataset = load_dataset(\"philschmid/dolly-15k-oai-style\", split=\"train\")"
+    "dataset = load_dataset(\"philschmid/dolly-15k-oai-style\", split=\"train\")\n",
+    "\n",
+    "print(dataset[3][\"messages\"])"
    ]
   },
   {
@@ -155,7 +157,6 @@
    "source": [
     "import torch\n",
     "from transformers import AutoTokenizer, AutoModelForCausalLM, BitsAndBytesConfig\n",
-    "from trl import setup_chat_format\n",
     "\n",
     "# Hugging Face model id\n",
     "model_id = \"google/gemma-7b\"\n",
@@ -224,7 +225,7 @@
     "args = TrainingArguments(\n",
     "    output_dir=\"gemma-7b-dolly-chatml\", # directory to save and repository id\n",
     "    num_train_epochs=3,                     # number of training epochs\n",
-    "    per_device_train_batch_size=3,          # batch size per device during training\n",
+    "    per_device_train_batch_size=2,          # batch size per device during training\n",
     "    gradient_accumulation_steps=2,          # number of steps before performing a backward/update pass\n",
     "    gradient_checkpointing=True,            # use gradient checkpointing to save memory\n",
     "    optim=\"adamw_torch_fused\",              # use fused adamw optimizer\n",
@@ -267,8 +268,8 @@
     "    tokenizer=tokenizer,\n",
     "    packing=True,\n",
     "    dataset_kwargs={\n",
-    "        \"add_special_tokens\": True, # make sure we add <bos> and <eos> tokens this is needed for Gemma\n",
-    "        \"append_concat_token\": False, # make sure to not add additional tokens when packing\n",
+    "        \"add_special_tokens\": False, # We template with special tokens\n",
+    "        \"append_concat_token\": False, # No need to add additional separator token\n",
     "    }\n",
     ")"
    ]
@@ -299,7 +300,33 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The training with Flash Attention for 3 epochs with a dataset of 10k samples took 01:29:58 on a `g5.2xlarge`. The instance costs `1,212$/h` which brings us to a total cost of only `1.8$`."
+    "The training with Flash Attention for 3 epochs with a dataset of 15k samples took 4:14:36 on a `g5.2xlarge`. The instance costs `1.21$/h` which brings us to a total cost of only ~`5.3$`.\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Optional: Merge LoRA adapter in to the original model\n",
+    "\n",
+    "When using QLoRA, we only train adapters and not the full model. This means when saving the model during training we only save the adapter weights and not the full model. If you want to save the full model, which makes it easier to use with Text Generation Inference you can merge the adapter weights into the model weights using the `merge_and_unload` method and then save the model with the save_pretrained method. \n",
+    "\n",
+    "Check out the [How to Fine-Tune LLMs in 2024 with Hugging Face](https://www.philschmid.de/fine-tune-llms-in-2024-with-trl#optional-merge-lora-adapter-in-to-the-original-model) blog post on how to do it .\n",
+    "\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 3. Test Model and run Inference\n",
+    "\n",
+    "After the training is done we want to evaluate and test our model. We will load different samples from the original dataset and evaluate the model on those samples, using a simple loop and accuracy as our metric. \n",
+    "\n",
+    "_Note: Evaluating Generative AI models is not a trivial task since 1 input can have multiple correct outputs. If you want to learn more about evaluating generative models, check out [Evaluate LLMs and RAG a practical example using Langchain and Hugging Face](https://www.philschmid.de/evaluate-llm) blog post._\n",
+    "\n"
    ]
   },
   {
@@ -315,16 +342,10 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 3. Test Model and run Inference\n",
-    "\n",
-    "After the training is done we want to evaluate and test our model. We will load different samples from the original dataset and evaluate the model on those samples, using a simple loop and accuracy as our metric. \n",
-    "\n",
-    "_Note: Evaluating Generative AI models is not a trivial task since 1 input can have multiple correct outputs. If you want to learn more about evaluating generative models, check out [Evaluate LLMs and RAG a practical example using Langchain and Hugging Face](https://www.philschmid.de/evaluate-llm) blog post._\n",
-    "\n"
+    "We load the adapted model and the tokenize into the `pipeline` to easily test it and extract the token id of `<|im_end|>` to use it in the `generate` method."
    ]
   },
   {
@@ -352,28 +373,77 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let’s load our test dataset try to generate an instruction."
+    "Lets test some prompt samples and see how the model performs. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    prompt:\n",
+      "What is the capital of Germany? Explain why thats the case and if it was different in the past?\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/conda/envs/pytorch/lib/python3.10/site-packages/transformers/pipelines/base.py:1157: UserWarning: You seem to be using the pipelines sequentially on GPU. In order to maximize efficiency please use a dataset\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    response:\n",
+      "The capital of Germany is Berlin. Berlin is the capital of Germany because it is the largest city in Germany, and it is the political center of the country. Berlin is also home to the German parliament, the Bundestag, and the federal government. In the past, the capital of Germany was Berlin, but it was divided into two parts during the Cold War. The western part of Berlin was controlled by the United States, France, and the United Kingdom, while the eastern part was controlled by the Soviet Union. Berlin was also the site of the Berlin Wall, which separated the two sides of the city from 1961 to 1989. The fall of the Berlin Wall marked the end of the Cold War, and Germany was reunified in 1990. Berlin has since become the capital of a reunified Germany.\n",
+      "--------------------------------------------------\n",
+      "    prompt:\n",
+      "Write a Python function to calculate the factorial of a number.\n",
+      "    response:\n",
+      "def factorial(n):\n",
+      "    fact = 1\n",
+      "    for i in range(1, n+1):\n",
+      "        fact = fact * i\n",
+      "    return fact\n",
+      "--------------------------------------------------\n",
+      "    prompt:\n",
+      "A rectangular garden has a length of 25 feet and a width of 15 feet. If you want to build a fence around the entire garden, how many feet of fencing will you need?\n",
+      "    response:\n",
+      "The total amount of fencing needed is 70 feet. This is determined by multiplying the perimeter of the garden (which is 70 feet) by the cost per foot of the fencing material.\n",
+      "--------------------------------------------------\n",
+      "    prompt:\n",
+      "What is the difference between a fruit and a vegetable? Give examples of each.\n",
+      "    response:\n",
+      "A fruit is the part of a plant that contains the seeds. Examples of fruits are apples, oranges, strawberries, and grapes. A vegetable is the part of a plant that is used for food but does not contain seeds. Examples of vegetables are carrots, potatoes, broccoli, and lettuce.\n",
+      "--------------------------------------------------\n"
+     ]
+    }
+   ],
    "source": [
-    "# run inference\n",
-    "messages = [\n",
-    "    {\n",
-    "        \"role\": \"user\",\n",
-    "        \"content\": \"What is the capital of Germany? Explain why thats the case and if it was different in the past?\"\n",
-    "    }\n",
+    "prompts = [\n",
+    "    \"What is the capital of Germany? Explain why thats the case and if it was different in the past?\",\n",
+    "    \"Write a Python function to calculate the factorial of a number.\",\n",
+    "    \"A rectangular garden has a length of 25 feet and a width of 15 feet. If you want to build a fence around the entire garden, how many feet of fencing will you need?\",\n",
+    "    \"What is the difference between a fruit and a vegetable? Give examples of each.\",\n",
     "]\n",
     "\n",
-    "prompt = pipe.tokenizer.apply_chat_template(messages, tokenize=False, add_generation_prompt=True)\n",
-    "outputs = pipe(prompt, max_new_tokens=1024, do_sample=True, temperature=0.7, top_k=50, top_p=0.95, eos_token_id=eos_token)\n",
+    "def test_inference(prompt):\n",
+    "    prompt = pipe.tokenizer.apply_chat_template([{\"role\": \"user\", \"content\": prompt}], tokenize=False, add_generation_prompt=True)\n",
+    "    outputs = pipe(prompt, max_new_tokens=1024, do_sample=True, temperature=0.7, top_k=50, top_p=0.95, eos_token_id=eos_token)\n",
+    "    return outputs[0]['generated_text'][len(prompt):].strip()\n",
     "\n",
-    "print(f\"prompt:\\n {messages[0]['content']}\")\n",
-    "print(f\"response:\\n {outputs[0]['generated_text'][len(prompt):]}\")"
+    "\n",
+    "for prompt in prompts:\n",
+    "    print(f\"    prompt:\\n{prompt}\")\n",
+    "    print(f\"    response:\\n{test_inference(prompt)}\")\n",
+    "    print(\"-\"*50)"
    ]
   },
   {
