add more context

--- a/training/gemma-lora-example.ipynb
+++ b/training/gemma-lora-example.ipynb
@@ -146,7 +146,20 @@
     " \n",
     "We will use the dataset formatting, packing and PEFT features in our example. As peft method we will use [QLoRA](https://arxiv.org/abs/2305.14314) a technique to reduce the memory footprint of large language models during finetuning, without sacrificing performance by using quantization.\n",
     "\n",
-    "_Note: Gemma comes with a big vocabulary of ~250,000 tokens. Normally if you want to fine-tune LLMs on the ChatML format you would need to add special tokens to the tokenizer and model and teach to understand the different roles in a conversation. But Google included ~100 placeholder tokens in the vocabulary, which we can replace with special tokens, like `<|im_start|>` and `<|im_end|>`. I created a Tokenizer for the ChatML format [philschmid/gemma-tokenizer-chatml](https://huggingface.co/philschmid/gemma-tokenizer-chatml) which you can use to fine-tune Gemma with ChatML._\n"
+    "_Note: Gemma comes with a big vocabulary of ~250,000 tokens. Normally if you want to fine-tune LLMs on the ChatML format you would need to add special tokens to the tokenizer and model and teach to understand the different roles in a conversation. But Google included ~100 placeholder tokens in the vocabulary, which we can replace with special tokens, like `<|im_start|>` and `<|im_end|>`. I created a Tokenizer for the ChatML format [philschmid/gemma-tokenizer-chatml](https://huggingface.co/philschmid/gemma-tokenizer-chatml) which you can use to fine-tune Gemma with ChatML._\n",
+    "\n",
+    "The Chat template used during fine-tuning is not 100% compatible with the ChatML format. Since [Google/gemma-7b](https://huggingface.co/google/gemma-7b) requires inputs always to start with a `<bos>` token. This means our inputs will look like. \n",
+    "\n",
+    "```xml\n",
+    "<bos><|im_start|>system\n",
+    "You are Gemma.<|im_end|>\n",
+    "<|im_start|>user\n",
+    "Hello, how are you?<|im_end|>\n",
+    "<|im_start|>assistant\n",
+    "I'm doing great. How can I help you today?<|im_end|>\\n<eos>\n",
+    "```\n",
+    "\n",
+    "_Note: We are not having an idea why Gemma needs `<bos>` token at the beginning of the input._\n"
    ]
   },
   {
