--- a/training/gemma-lora-example.ipynb
+++ b/training/gemma-lora-example.ipynb
@@ -94,7 +94,7 @@
     "from huggingface_hub import login\n",
     "\n",
     "login(\n",
-    "  token=\"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\", # ADD YOUR TOKEN HERE\n",
+    "  token=\"\", # ADD YOUR TOKEN HERE\n",
     "  add_to_git_credential=True\n",
     ")\n"
    ]
