--- a/training/fsdp-qlora-distributed-mixtral.ipynb
+++ b/training/fsdp-qlora-distributed-mixtral.ipynb
@@ -8,14 +8,6 @@
     "# Efficiently scale distributed training with PyTorch FSDP and Q-Lora\n",
     "\n",
     "Open LLMs like Meta [Llama 2](https://huggingface.co/meta-llama/Llama-2-70b-chat-hf), Mistral AI [Mistral](https://huggingface.co/mistralai/Mistral-7B-Instruct-v0.2) & [Mixtral](https://huggingface.co/mistralai/Mixtral-8x7B-Instruct-v0.1) models or TII [Falcon](https://huggingface.co/tiiuae/falcon-40b) brought a lot of progress in the last year. We went from no OpenAI competitor to a whole zoo of LLMs, which can be used for a variety of tasks. However, most of the time you need to fine-tune the model on your data or use case to get the full potential of the model. Fine-tuning smaller LLMs, like Mistral became very accessible on a single GPU by using Q-Lora. But efficiently fine-tuning bigger models like Llama 2 70b or Mixtral stayed a challenge until now. \n",
-    "\n",
-    "In a collaboration between [Answer.AI](https://www.answer.ai/posts/2024-03-06-fsdp-qlora.html), Tim Dettmers [Q-Lora creator](https://github.com/TimDettmers/bitsandbytes) and [Hugging Face](https://huggingface.co/), we are proud to announce to share the support of Q-Lora and PyTorch FSDP (Fully Sharded Data Parallel). FSDP and Q-Lora allows you now to fine-tune Llama 2 70b or Mixtral 8x7B on 2x consumer GPUs (24GB). If you want to learn more about the background of this collaboration take a look at [You can now train a 70b language model at home](https://www.answer.ai/posts/2024-03-06-fsdp-qlora.html). Hugging Face PEFT is were the magic happens for this happens, read more about it in the [PEFT documentation](https://huggingface.co/docs/peft/v0.10.0/en/accelerate/fsdp).\n",
-    "\n",
-    "The TL;DR;\n",
-    "* [PyTorch FSDP](https://pytorch.org/blog/introducing-pytorch-fully-sharded-data-parallel-api/) is a data/model parallelism technique that shards model across GPUs, reducing memory requirements and enabling the training of larger models more efficiently​​​​​​.\n",
-    "* Q-LoRA is a fine-tuning method that leverages quantization and Low-Rank Adapters to efficiently reduced computational requirements and memory footprint. \n",
-    "\n",
-    "\n",
     " \n",
     "This blog post walks you thorugh how to fine-tune a LLM using PyTorch FSDP and Q-Lora with the help of Hugging Face [TRL](https://huggingface.co/docs/trl/index), [Transformers](https://huggingface.co/docs/transformers/index), [peft](https://huggingface.co/docs/peft/index) & [datasets](https://huggingface.co/docs/datasets/index). In addition to FSDP we will use [Flash Attention v2 through the Pytorch SDPA](https://pytorch.org/blog/pytorch2-2/) implementation. \n",
     "\n",
@@ -28,7 +20,14 @@
     "\n",
     "_Note: This blog was created and validated on NVIDIA H100 and NVIDIA A10G GPUs._\n",
     "\n",
-    "As example use case we will fine-tune the Llama 2 70b model on the [HuggingFaceH4/no_robots](https://huggingface.co/datasets/HuggingFaceH4/no_robots) dataset. No Robots is a high-quality dataset of 10,000 instructions and demonstrations created by skilled human annotators. This data can be used for supervised fine-tuning (SFT) to make language models follow instructions better. No Robots was modelled after the instruction dataset described in OpenAI's [InstructGPT paper](https://huggingface.co/papers/2203.02155), and is comprised mostly of single-turn instructions."
+    "As example use case we will fine-tune the Llama 2 70b model on the [HuggingFaceH4/no_robots](https://huggingface.co/datasets/HuggingFaceH4/no_robots) dataset. No Robots is a high-quality dataset of 10,000 instructions and demonstrations created by skilled human annotators. This data can be used for supervised fine-tuning (SFT) to make language models follow instructions better. No Robots was modelled after the instruction dataset described in OpenAI's [InstructGPT paper](https://huggingface.co/papers/2203.02155), and is comprised mostly of single-turn instructions.\n",
+    "\n",
+    "**FSDP + Q-Lora Background**\n",
+    "\n",
+    "In a collaboration between [Answer.AI](https://www.answer.ai/posts/2024-03-06-fsdp-qlora.html), Tim Dettmers [Q-Lora creator](https://github.com/TimDettmers/bitsandbytes) and [Hugging Face](https://huggingface.co/), we are proud to announce to share the support of Q-Lora and PyTorch FSDP (Fully Sharded Data Parallel). FSDP and Q-Lora allows you now to fine-tune Llama 2 70b or Mixtral 8x7B on 2x consumer GPUs (24GB). If you want to learn more about the background of this collaboration take a look at [You can now train a 70b language model at home](https://www.answer.ai/posts/2024-03-06-fsdp-qlora.html). Hugging Face PEFT is were the magic happens for this happens, read more about it in the [PEFT documentation](https://huggingface.co/docs/peft/v0.10.0/en/accelerate/fsdp).\n",
+    "\n",
+    "* [PyTorch FSDP](https://pytorch.org/blog/introducing-pytorch-fully-sharded-data-parallel-api/) is a data/model parallelism technique that shards model across GPUs, reducing memory requirements and enabling the training of larger models more efficiently​​​​​​.\n",
+    "* Q-LoRA is a fine-tuning method that leverages quantization and Low-Rank Adapters to efficiently reduced computational requirements and memory footprint. \n"
    ]
   },
   {
@@ -47,25 +46,18 @@
    "outputs": [],
    "source": [
     "# Install Pytorch for FSDP and FA/SDPA\n",
-    "!pip install \"torch==2.2.1\" tensorboard\n",
+    "!pip install \"torch==2.2.2\" tensorboard\n",
     "\n",
     "# Install Hugging Face libraries\n",
     "!pip install  --upgrade \\\n",
-    "  \"transformers==4.39.1\" \\\n",
+    "  \"transformers==4.39.3\" \\\n",
     "  \"datasets==2.18.0\" \\\n",
-    "  \"accelerate==0.28.0\" \\\n",
+    "  \"accelerate==0.29.2\" \\\n",
     "  \"evaluate==0.4.1\" \\\n",
-    "  \"bitsandbytes==0.43.0\" \\\n",
-    "  \"trl==0.8.1\"  \\\n",
-    "  \"peft==0.10.0\" "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "We will use the [Hugging Face Hub](https://huggingface.co/models) as a remote model versioning service. This means we will automatically push our model, logs and information to the Hub during training. You must register on the [Hugging Face](https://huggingface.co/join) for this. After you have an account, we will use the `login` util from the `huggingface_hub` package to log into our account and store our token (access key) on the disk.\n",
-    "\n"
+    "  \"bitsandbytes==0.43.1\" \\\n",
+    "  \"trl==0.8.3\"  \\\n",
+    "  \"peft==0.10.0\" \n",
+    "  \n"
    ]
   },
   {
@@ -74,12 +66,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from huggingface_hub import login\n",
-    "\n",
-    "login(\n",
-    "  token=\"\", # ADD YOUR TOKEN HERE\n",
-    "  add_to_git_credential=True\n",
-    ")"
+    "!pip install git+https://github.com/huggingface/trl"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Next we need to login into Hugging Face to access the Llama 2 70b model. If you don't have an account yet and accepted the terms, you can create one [here](https://huggingface.co/join). "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!huggingface-cli login --token \"\""
    ]
   },
   {
@@ -90,7 +93,7 @@
     "\n",
     "After our environment is set up, we can start creating and preparing our dataset. A fine-tuning dataset should have a diverse set of demonstrations of the task you want to solve. If you want to learn more about how to create a dataset, take a look at the [How to Fine-Tune LLMs in 2024 with Hugging Face](https://www.philschmid.de/fine-tune-llms-in-2024-with-trl#3-create-and-prepare-the-dataset).\n",
     "\n",
-    "As mentioned in the introduction, we will use the [HuggingFaceH4/no_robots](https://huggingface.co/datasets/HuggingFaceH4/no_robots) dataset. The dataset is already has a column `messages` with conversational format, which is supported by trl. We can directly use datasets they use this format. \n",
+    "We will use the [HuggingFaceH4/no_robots](https://huggingface.co/datasets/HuggingFaceH4/no_robots) dataset. The dataset is already has a column `messages` with conversational format, which is supported by trl. We can directly use datasets they use this format. \n",
     "\n",
     "```json\n",
     "{\"messages\": [{\"role\": \"system\", \"content\": \"You are...\"}, {\"role\": \"user\", \"content\": \"...\"}, {\"role\": \"assistant\", \"content\": \"...\"}]}\n",
@@ -98,58 +101,21 @@
     "{\"messages\": [{\"role\": \"system\", \"content\": \"You are...\"}, {\"role\": \"user\", \"content\": \"...\"}, {\"role\": \"assistant\", \"content\": \"...\"}]}\n",
     "```\n",
     "\n",
-    "The no_robots dataset has 10,000 split into 9,500 training and  500 test examples. Some samples are not including a `system` message. We will load the dataset with the `datasets` library, add a missing `system` message and save them to separate files. "
+    "The [no_robots](https://huggingface.co/datasets/HuggingFaceH4/no_robots) dataset has 10,000 split into 9,500 training and  500 test examples. Some samples are not including a `system` message. We will load the dataset with the `datasets` library, add a missing `system` message and save them to separate files. \n",
+    "\n",
+    "After making sure each sample has a `system` message, we will save the dataset as json files."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "652346ab8ff44cbba443754f53262a0d",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Creating json from Arrow format:   0%|          | 0/10 [00:00<?, ?ba/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "94df934caf6045ebb669adef6f782f61",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Creating json from Arrow format:   0%|          | 0/1 [00:00<?, ?ba/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "787799"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from datasets import load_dataset\n",
     "\n",
     "# Convert dataset to OAI messages\n",
-    "system_message = \"\"\"You are Cesar, an AI assistant created by Philipp to be helpful and honest. Your knowledge spans a wide range of topics, allowing you to engage in substantive conversations and provide analysis on complex subjects.\"\"\"\n",
+    "system_message = \"\"\"You are Llama, an AI assistant created by Philipp to be helpful and honest. Your knowledge spans a wide range of topics, allowing you to engage in substantive conversations and provide analysis on complex subjects.\"\"\"\n",
     "\n",
     "def create_conversation(sample):\n",
     "    if sample[\"messages\"][0][\"role\"] == \"system\":\n",
@@ -166,9 +132,12 @@
     "columns_to_remove.remove(\"messages\")\n",
     "dataset = dataset.map(create_conversation, remove_columns=columns_to_remove,batched=False)\n",
     "\n",
+    "# Filter out conversations which are corrupted with wrong turns, keep which have even number of turns after adding system message\n",
+    "dataset[\"train_sft\"] = dataset[\"train_sft\"].filter(lambda x: len(x[\"messages\"][1:]) % 2 == 0)\n",
+    "\n",
     "# save datasets to disk \n",
-    "dataset[\"train_sft\"].to_json(\"train_dataset.json\", orient=\"records\")\n",
-    "dataset[\"test_sft\"].to_json(\"test_dataset.json\", orient=\"records\")"
+    "dataset[\"train_sft\"].to_json(\"train_dataset.json\", orient=\"records\",force_ascii=False)\n",
+    "dataset[\"test_sft\"].to_json(\"test_dataset.json\", orient=\"records\",force_ascii=False)"
    ]
   },
   {
@@ -187,32 +156,22 @@
     "* PEFT (parameter-efficient fine-tuning) support including Q-LoRA\n",
     "* Preparing the model and tokenizer for conversational fine-tuning (e.g. adding special tokens)\n",
     " \n",
-    "To make it easy for everyone to configure the training we used the new `TrlParser`, that allows you to provide your hyperparameters in a yaml file. If you want to make changes to the training, change the inputs below.\n",
-    "\n",
-    "_Note you can overwrite the arguments from the config file by explicitly passing them to the CLI, e.g. `--num_epochs 10`_"
+    "To make it easy for everyone to configure the training we used the new `TrlParser`, that allows you to provide your hyperparameters in a yaml file. If you want to make changes to the training, change the inputs below or you can overwrite the arguments from the config file by explicitly passing them to the CLI, e.g. `--num_epochs 10`"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Overwriting llama_70b_fsdp_qlora.yaml\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%writefile llama_70b_fsdp_qlora.yaml\n",
     "# script parameters\n",
-    "model_id: \"meta-llama/llama-70b-h\"     # Hugging Face model id\n",
+    "model_id: \"meta-llama/llama-7b-hf\"     # Hugging Face model id\n",
     "dataset_path: \"./\"                     # path to dataset\n",
     "max_seq_len: 3072                      # max sequence length for model and packing of the dataset\n",
     "# training parameters\n",
-    "output_dir: \"/llama-70b-hf-no-robot\"  # Temporary output directory for model checkpoints\n",
+    "output_dir: \"./llama-7b-hf-no-robot\"  # Temporary output directory for model checkpoints\n",
     "report_to: \"tensorboard\"              # report metrics to tensorboard\n",
     "learning_rate: 2e-4                   # learning rate\n",
     "lr_scheduler_type: \"constant\"             # learning rate scheduler\n",
@@ -251,9 +210,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Expected Memory usage:\n",
+    "**Expected Memory usage:**\n",
+    "* Full-finetuning with FSDP => ~16X80GB GPUs\n",
+    "* FSDP + LoRA => 8X80GB GPUs\n",
+    "* FSDP + Q-Lora => 2x40GB GPUs \n",
+    "* FSDP + Q-Lora + CPU offloading => 2x24GB GPUs, with 19.6 GB/GPU and overall CPU RAM of around 107 GB\n",
     "\n",
-    "In the above example, the memory consumed per GPU is 19.6 GB while CPU RAM usage is around 107 GB. When disabling CPU offloading, the GPU memory usage is 35.6 GB/ GPU. Therefore, what took 16X80GB GPUs for full finetuning, 8X80GB GPUs with FSDP+LoRA, and a couple of 80GB GPUs with DDP+QLoRA, now requires 2X24GB GPUs. This makes finetuning of large models more accessible."
+    "_Note: To use CPU offloading you need to change the value of `fsdp_offload_params` to `True` in the `llama_70b_fsdp_qlora.yaml`._"
    ]
   },
   {
@@ -262,7 +225,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!torchrun --nproc_per_node=8 ./scripts/run_fsdp_qlora.py --config llama_70b_fsdp_qlora.yaml"
+    "!torchrun --nproc_per_node=4 ./scripts/run_fsdp_qlora.py --config llama_70b_fsdp_qlora.yaml"
    ]
   },
   {
@@ -270,7 +233,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The training with Flash Attention for 3 epochs with a dataset of 10k samples took 01:29:58 on a `g5.2xlarge`. The instance costs `1,212$/h` which brings us to a total cost of only `1.8$`."
+    "The training with Flash Attention for 3 epochs with a dataset of 10k samples took 18:29:58 on a `g5.12xlarge`. The instance costs `1,212$/h` which brings us to a total cost of only `1.8$`."
    ]
   },
   {
@@ -281,7 +244,7 @@
     "\n",
     "When using QLoRA, we only train adapters and not the full model. This means when saving the model during training we only save the adapter weights and not the full model. If you want to save the full model, which makes it easier to use with Text Generation Inference you can merge the adapter weights into the model weights using the `merge_and_unload` method and then save the model with the `save_pretrained` method. This will save a default model, which can be used for inference.\n",
     "\n",
-    "_Note: You might require > 30GB CPU Memory._"
+    "_Note: You might require > 192GB CPU Memory._"
    ]
   },
   {
@@ -290,7 +253,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "#### COMMENT IN TO MERGE PEFT AND BASE MODEL ####\n",
     "# from peft import AutoPeftModelForCausalLM\n",
     "\n",
