--- a/training/fsdp-qlora-distributed-mixtral.ipynb
+++ b/training/fsdp-qlora-distributed-mixtral.ipynb
@@ -211,10 +211,10 @@
    "metadata": {},
    "source": [
     "**Expected Memory usage:**\n",
-    "* Full-finetuning with FSDP => ~16X80GB GPUs\n",
-    "* FSDP + LoRA => 8X80GB GPUs\n",
-    "* FSDP + Q-Lora => 2x40GB GPUs \n",
-    "* FSDP + Q-Lora + CPU offloading => 2x24GB GPUs, with 19.6 GB/GPU and overall CPU RAM of around 107 GB\n",
+    "* Full-finetuning with FSDP needs ~16X80GB GPUs\n",
+    "* FSDP + LoRA needs ~8X80GB GPUs\n",
+    "* FSDP + Q-Lora needs 2x40GB GPUs \n",
+    "* FSDP + Q-Lora + CPU offloading needs 4x24GB GPUs, with 18.6 GB/GPU and 127 GB CPU RAM with a sequence length of 2048 and a batch size of 1\n",
     "\n",
     "_Note: To use CPU offloading you need to change the value of `fsdp_offload_params` to `True` in the `llama_70b_fsdp_qlora.yaml`._"
    ]
@@ -225,7 +225,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!torchrun --nproc_per_node=4 ./scripts/run_fsdp_qlora.py --config llama_70b_fsdp_qlora.yaml"
+    "!ACCELERATE_USE_FSDP=1 FSDP_CPU_RAM_EFFICIENT_LOADING=1 torchrun --nproc_per_node=4 ./scripts/run_fsdp_qlora.py"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "! accelerate launch --config_file \"fsdp_config.yaml\" scripts/run_fsdp_qlora.py "
    ]
   },
   {
