--- a/training/fsdp-qlora-distributed-llama3.ipynb
+++ b/training/fsdp-qlora-distributed-llama3.ipynb
@@ -46,24 +46,21 @@
     "\n",
     "# Install Hugging Face libraries\n",
     "!pip install  --upgrade \\\n",
-    "  \"transformers==4.40.0\" \\\n",
-    "  \"datasets==2.18.0\" \\\n",
-    "  \"accelerate==0.29.3\" \\\n",
-    "  \"evaluate==0.4.1\" \\\n",
-    "  \"bitsandbytes==0.43.1\" \\\n",
-    "  \"huggingface_hub==0.22.2\" \\\n",
-    "  \"peft==0.10.0\" \n",
-    "  # \"trl==0.8.5\"  \\\n",
-    "  \n",
-    " # fix\n",
-    " !pip install git+https://github.com/huggingface/trl.git@fix-trl-critial "
+    "\"transformers==4.40.0\" \\\n",
+    "\"datasets==2.18.0\" \\\n",
+    "\"accelerate==0.29.3\" \\ \n",
+    "\"evaluate==0.4.1\" \\\n",
+    "\"bitsandbytes==0.43.1\" \\\n",
+    "\"huggingface_hub==0.22.2\" \\\n",
+    "\"trl==0.8.6\"  \\\n",
+    "\"peft==0.10.0\" "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Next we need to login into Hugging Face to access the Llama 2 70b model. If you don't have an account yet and accepted the terms, you can create one [here](https://huggingface.co/join). "
+    "Next we need to login into Hugging Face to access the Llama 3 70b model. If you don't have an account yet and accepted the terms, you can create one [here](https://huggingface.co/join). "
    ]
   },
   {
@@ -193,9 +190,11 @@
    "source": [
     "_Note: At the end of the training there will be a slight increase in GPU memory usage (~10%). This is due to the saving of the model correctly. Make sure to have enough memory left on your GPU to save the model. [REF](https://huggingface.co/docs/peft/v0.10.0/en/accelerate/fsdp#memory-usage)_\n",
     "\n",
-    "To launch our training we will use `torchrun` to keep the example flexible and easy to adjust to, e.g. Amazon SageMaker or Google Cloud Vertex AI. To make `torchrun` we need to also set the environment variable `ACCELERATE_USE_FSDP` and `FSDP_CPU_RAM_EFFICIENT_LOADING` to tell transformers to use FSDP and load the model in a memory-efficient way.  \n",
+    "To launch our training we will use `torchrun` to keep the example flexible and easy to adjust to, e.g. Amazon SageMaker or Google Cloud Vertex AI. For `torchrun` and FSDP we need to set the environment variable `ACCELERATE_USE_FSDP` and `FSDP_CPU_RAM_EFFICIENT_LOADING` to tell transformers/accelerate to use FSDP and load the model in a memory-efficient way.  \n",
     "\n",
-    "_Note: To use CPU offloading you need to change the value of `offload_params` to `True` in the `llama_3_70b_fsdp_qlora.yaml`._"
+    "_Note: To NOT CPU offloading you need to change the value of `fsdp` and remove `offload`. This only works on > 40GB GPUs since it requires more memory._\n",
+    "\n",
+    "Now, lets launch the training with the following command:"
    ]
   },
   {
@@ -204,7 +203,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!ACCELERATE_USE_FSDP=1 FSDP_CPU_RAM_EFFICIENT_LOADING=1 torchrun --nproc_per_node=8 ./scripts/run_fsdp_qlora.py --config llama_3_70b_fsdp_qlora.yaml --config llama_3_70b_fsdp_qlora.yaml"
+    "!ACCELERATE_USE_FSDP=1 FSDP_CPU_RAM_EFFICIENT_LOADING=1 torchrun --nproc_per_node=4 ./scripts/run_fsdp_qlora.py --config llama_3_70b_fsdp_qlora.yaml"
    ]
   },
   {
@@ -216,9 +215,13 @@
     "* Full-finetuning with FSDP needs ~16X80GB GPUs\n",
     "* FSDP + LoRA needs ~8X80GB GPUs\n",
     "* FSDP + Q-Lora needs 2x40GB GPUs \n",
-    "* FSDP + Q-Lora + CPU offloading needs 4x24GB GPUs, with 18.6 GB/GPU and 127 GB CPU RAM with a sequence length of 2048 and a batch size of 1\n",
+    "* FSDP + Q-Lora + CPU offloading needs 4x24GB GPUs, with 22 GB/GPU and 127 GB CPU RAM with a sequence length of 3072 and a batch size of 1. \n",
     "\n",
-    "The training with Flash Attention for 3 epochs with a dataset of 10k samples took 18:29:58 on a `g5.12xlarge`. The instance costs `1,212$/h` which brings us to a total cost of only `1.8$`."
+    "The training of Llama 3 70B with Flash Attention for 3 epochs with a dataset of 10k samples takes 45h on a `g5.12xlarge`. The instance costs `5.67$/h` which would result in a total cost of `255.15$`. This sounds expensive but allows you to fine-tune a Llama 3 70B on small GPU resources. \n",
+    "\n",
+    "If we scale up the training to 4x H100 GPUs, the training time will be reduced to\n",
+    "\n",
+    "_Note: During evaluation and testing of the blog post I noticed that ~40 max steps (80 samples stacked to 3k sequence length) are enough for first results. The training for 40 steps ~1h or ~$5._"
    ]
   },
   {
@@ -264,33 +267,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "36daf923fe0f4fb2ac6a42737f443490",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Loading checkpoint shards:   0%|          | 0/30 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Special tokens have been added in the vocabulary, make sure the associated word embeddings are fine-tuned or trained.\n",
-      "Special tokens have been added in the vocabulary, make sure the associated word embeddings are fine-tuned or trained.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
+    "import os \n",
+    "os.environ[\"HF_HOME\"] = \"/opt/dlami/nvme\"\n",
+    "\n",
     "import torch\n",
     "from peft import AutoPeftModelForCausalLM\n",
     "from transformers import AutoTokenizer \n",
@@ -317,46 +300,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "The attention mask and the pad token id were not set. As a consequence, you may observe unexpected behavior. Please pass your input's `attention_mask` to obtain reliable results.\n",
-      "Setting `pad_token_id` to `eos_token_id`:128001 for open-end generation.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "**Query:**\n",
-      "I can get a $500 rebate from the water utility for replacing my lawn with something else. What are some options for ground cover that save water and look good?\n",
-      "\n",
-      "\n",
-      "**Original Answer:**\n",
-      "There are many turf replacements that save water and look good. Here are three options:\n",
-      "\n",
-      "1. Sedum “Angelina.” This plant has blue-green leaves and yellow flowers. \n",
-      "\n",
-      "2. Cistus \"Little Miss Sunshine.\" This Cistus has white flowers that will attract butterflies to your garden. \n",
-      "\n",
-      "3. Ceanothus \"Yankee Point.\" This cultivar of the California lilac has baby blue flowers. \n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "**Generated Answer:**\n",
-      "1. Rock gardens: Rock gardens can be designed with a variety of colors and textures, making them visually appealing and low-maintenance. They require little to no water and can be customized to fit the style of your home and yard.\n",
-      "2. Mulch: Mulch is a versatile and low-maintenance ground cover option that can be used to create a natural-looking landscape. It can be made from a variety of materials, including wood chips, bark, and straw, and it helps to retain soil moisture and suppress weed growth.\n",
-      "3. Gravel: Gravel is a low-maintenance and durable ground cover option that can be used to create a modern or rustic look in your yard. It comes in a variety of colors and sizes and can be used to create pathways or decorative features.\n",
-      "4. Artificial grass: Artificial grass is a low-maintenance and water-saving option for ground cover. It requires no watering or mowing and can be customized to fit the style of your home and yard.\n",
-      "5. Native plants: Native plants are a water-saving and low-maintenance option for ground cover. They are adapted to the local climate and soil conditions and require little to no watering or fertilization. They also provide habitat for local wildlife and can be used to create a natural-looking landscape.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from datasets import load_dataset \n",
     "from random import randint\n",
@@ -390,7 +336,7 @@
    "source": [
     "That looks pretty good! 🚀 Now, its your turn! \n",
     "\n",
-    "If you want to deploy your model into production check out [6. Deploy the LLM for Production](https://www.philschmid.de/fine-tune-llms-in-2024-with-trl#6-deploy-the-llm-for-production)."
+    "If you want to deploy your model into production check out [Deploy the LLM for Production](https://www.philschmid.de/fine-tune-llms-in-2024-with-trl#6-deploy-the-llm-for-production)."
    ]
   },
   {
