--- a/training/fsdp-qlora-distributed-llama3.ipynb
+++ b/training/fsdp-qlora-distributed-llama3.ipynb
@@ -42,18 +42,10 @@
    "outputs": [],
    "source": [
     "# Install Pytorch for FSDP and FA/SDPA\n",
-    "!pip install \"torch==2.2.2\" tensorboard\n",
+    "%pip install \"torch==2.2.2\" tensorboard\n",
     "\n",
     "# Install Hugging Face libraries\n",
-    "!pip install  --upgrade \\\n",
-    "\"transformers==4.40.0\" \\\n",
-    "\"datasets==2.18.0\" \\\n",
-    "\"accelerate==0.29.3\" \\ \n",
-    "\"evaluate==0.4.1\" \\\n",
-    "\"bitsandbytes==0.43.1\" \\\n",
-    "\"huggingface_hub==0.22.2\" \\\n",
-    "\"trl==0.8.6\"  \\\n",
-    "\"peft==0.10.0\" "
+    "%pip install  --upgrade \"transformers==4.40.0\" \"datasets==2.18.0\" \"accelerate==0.29.3\" \"evaluate==0.4.1\" \"bitsandbytes==0.43.1\" \"huggingface_hub==0.22.2\" \"trl==0.8.6\" \"peft==0.10.0\" "
    ]
   },
   {
@@ -214,12 +206,12 @@
     "**Expected Memory usage:**\n",
     "* Full-finetuning with FSDP needs ~16X80GB GPUs\n",
     "* FSDP + LoRA needs ~8X80GB GPUs\n",
-    "* FSDP + Q-Lora needs 2x40GB GPUs \n",
+    "* FSDP + Q-Lora needs ~2x40GB GPUs \n",
     "* FSDP + Q-Lora + CPU offloading needs 4x24GB GPUs, with 22 GB/GPU and 127 GB CPU RAM with a sequence length of 3072 and a batch size of 1. \n",
     "\n",
-    "The training of Llama 3 70B with Flash Attention for 3 epochs with a dataset of 10k samples takes 45h on a `g5.12xlarge`. The instance costs `5.67$/h` which would result in a total cost of `255.15$`. This sounds expensive but allows you to fine-tune a Llama 3 70B on small GPU resources. \n",
+    "The training of Llama 3 70B with Flash Attention for 3 epochs with a dataset of 10k samples takes 45h on a `g5.12xlarge`. The instance costs `5.67$/h` which would result in a total cost of `255.15$`. This sounds expensive but allows you to fine-tune a Llama 3 70B on small GPU resources. If we scale up the training to 4x H100 GPUs, the training time will be reduced to ~1,25h. If we assume 1x H100 costs `5-10$/h` the total cost would between `25$-50$`.\n",
     "\n",
-    "If we scale up the training to 4x H100 GPUs, the training time will be reduced to\n",
+    "We can see a trade-off between accessibility and performance. If you have access to more/better compute you can reduce the training time and cost, but even with small resources you can fine-tune a Llama 3 70B. The cost/performance is different since for 4x A10G GPUs we need to offload the model to the CPU which reduces the overall flops. \n",
     "\n",
     "_Note: During evaluation and testing of the blog post I noticed that ~40 max steps (80 samples stacked to 3k sequence length) are enough for first results. The training for 40 steps ~1h or ~$5._"
    ]
@@ -271,9 +263,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os \n",
-    "os.environ[\"HF_HOME\"] = \"/opt/dlami/nvme\"\n",
-    "\n",
     "import torch\n",
     "from peft import AutoPeftModelForCausalLM\n",
     "from transformers import AutoTokenizer \n",
@@ -327,7 +316,14 @@
     "\n",
     "print(f\"**Query:**\\n{eval_dataset[rand_idx]['messages'][1]['content']}\\n\")\n",
     "print(f\"**Original Answer:**\\n{eval_dataset[rand_idx]['messages'][2]['content']}\\n\")\n",
-    "print(f\"**Generated Answer:**\\n{tokenizer.decode(response,skip_special_tokens=True)}\")"
+    "print(f\"**Generated Answer:**\\n{tokenizer.decode(response,skip_special_tokens=True)}\")\n",
+    "\n",
+    "# **Query:**\n",
+    "# How long was the Revolutionary War?\n",
+    "# **Original Answer:**\n",
+    "# The American Revolutionary War lasted just over seven years. The war started on April 19, 1775, and ended on September 3, 1783. \n",
+    "# **Generated Answer:**\n",
+    "# The Revolutionary War, also known as the American Revolution, was an 18th-century war fought between the Kingdom of Great Britain and the Thirteen Colonies. The war lasted from 1775 to 1783."
    ]
   },
   {
